got homepage working and updated colors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,32 @@
     <title>Very Best Debug</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <style>
+      body {
+        background-color: #EED5C2;
+      }
+
+      body a {
+        color: #9C5E74;
+        background-color: #EDA4BD;
+        text-decoration: none;
+      }
+
+      body h1{
+        background-color: #9C5E74;
+      }
+
+      body tr {
+        color: #4E2F3A;
+        background-color: #EDA4BD;
+      }
+
+      body th {
+        color: #EED5C2;
+        background-color: #4E2F3A;
+      }
+    </style>
   </head>
 
   <body>
